#16453# Se agrega filtro IN para listar solicitudes con estado (6,7,8)
