# swagger/swagger.yml
@@ -4007,6 +4007,43 @@ paths:
           description: '{string} delete success!'
         "403":
           description: id is empty
+  /respuesta_solicitud/Solicitudes:
+    get:
+      tags:
+      - respuesta_solicitud
+      description: get RespuestaSolicitud
+      operationId: RespuestaSolicitudController.Get All Solicitudes
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
+        name: fields
+        description: Fields returned. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Sorted-by fields. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: order
+        description: Order corresponding to each sortby field, if single value, apply
+          to all sortby fields. e.g. desc,asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limit the size of result set. Must be an integer
+        type: string
+      - in: query
+        name: offset
+        description: Start position of result set. Must be an integer
+        type: string
+      responses:
+        "200":
+          schema:
+            $ref: '#/definitions/models.RespuestaSolicitud'
+        "403": {}
   /revision_trabajo_grado/:
     get:
       tags:
@@ -5831,13 +5868,13 @@ definitions:
     type: object
     properties:
       DetallesSolicitud:
-        $ref: '#/definitions/models.DetalleSolicitud'
+        $ref: '#/definitions/193240.<nil>.DetalleSolicitud'
       Respuesta:
         $ref: '#/definitions/models.RespuestaSolicitud'
       Solicitud:
         $ref: '#/definitions/models.SolicitudTrabajoGrado'
       UsuariosSolicitud:
-        $ref: '#/definitions/models.UsuarioSolicitud'
+        $ref: '#/definitions/193279.<nil>.UsuarioSolicitud'
   models.TrabajoGrado:
     title: TrabajoGrado
     type: object
